force-app/main/default/objects/AcctSeed__Project__c/fields/Order_Taxable_Provincial__c.field-meta.xml
<CustomField>
    <fullName>Order_Taxable_Provincial__c</fullName>
    <label>Order Taxable Provincial</label>
    <summarizedField>AcctSeed__Project_Task__c.Order_Taxable_Provincial__c</summarizedField>
    <summaryForeignKey>AcctSeed__Project_Task__c.AcctSeed__Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>