force-app/main/default/objects/AcctSeed__Project__c/fields/Original_ERP__c.field-meta.xml
<CustomField>
    <fullName>Original_ERP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The original ERP of this Back Ordered parts ERP</description>
    <label>Original ERP</label>
    <referenceTo>AcctSeed__Project__c</referenceTo>
    <relationshipLabel>ERP Orders (Original ERP)</relationshipLabel>
    <relationshipName>Back_Order_ERPs</relationshipName>
    <type>Lookup</type>
</CustomField>