force-app/main/default/objects/AcctSeed__Project__c/fields/Partner_External_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Partner_External_PO_Number__c</fullName>
    <description>A reference to the PO number generated in the Partners Internal System</description>
    <label>Partner Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>