force-app/main/default/objects/AcctSeed__Project__c/fields/Parts_Order_Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>Parts_Order_Status_Notes__c</fullName>
    <label>Parts Order Status Notes</label>
    <type>TextArea</type>
</CustomField>