force-app/main/default/objects/AcctSeed__Project__c/fields/Pickup_Location__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Location__c</fullName>
    <label>Pickup Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Whitefish - Pick-up</fullName>
            </value>
            <value>
                <fullName>Whitefish - Delivery</fullName>
            </value>
            <value>
                <fullName>Barrie - Pick-up</fullName>
            </value>
            <value>
                <fullName>Barrie - Delivery</fullName>
            </value>
            <value>
                <fullName>Montreal - Pick-up</fullName>
            </value>
            <value>
                <fullName>Montreal - Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>