force-app/main/default/objects/AcctSeed__Project__c/fields/Pre_Insurance_Total__c.field-meta.xml
<CustomField>
    <fullName>Pre_Insurance_Total__c</fullName>
    <formula>ROUND( Grand_Total__c,2 ) - ROUND( Insurance_Item_Total__c,2 ) - ROUND(Tax_Amount_Retail__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pre Insurance Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>