force-app/main/default/objects/AcctSeed__Project__c/fields/Profit__c.field-meta.xml
<CustomField>
    <fullName>Profit__c</fullName>
    <formula>Revenue__c -  Expense__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>