force-app/main/default/objects/AcctSeed__Project__c/fields/RecordType_Name__c.field-meta.xml
<CustomField>
    <fullName>RecordType_Name__c</fullName>
    <formula>RecordType.Name</formula>
    <label>RecordType Name</label>
    <type>Text</type>
</CustomField>