force-app/main/default/objects/AcctSeed__Project__c/fields/Requested_Deliver_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Deliver_Date__c</fullName>
    <label>Requested Deliver Date</label>
    <type>Date</type>
</CustomField>