force-app/main/default/objects/AcctSeed__Project__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <label>Revenue</label>
    <summarizedField>AcctSeed__Project_Task__c.Revenue__c</summarizedField>
    <summaryForeignKey>AcctSeed__Project_Task__c.AcctSeed__Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>