force-app/main/default/objects/AcctSeed__Project__c/fields/Rigging_Status__c.field-meta.xml
<CustomField>
    <fullName>Rigging_Status__c</fullName>
    <description>Status field for Wholesale Rigging Dept. to update Partner ERPs on Rigging Status</description>
    <label>Rigging Status</label>
    <type>TextArea</type>
</CustomField>