force-app/main/default/objects/AcctSeed__Project__c/fields/Sale_Type__c.field-meta.xml
<CustomField>
    <fullName>Sale_Type__c</fullName>
    <formula>IF(  AcctSeed__Account__r.RecordType.DeveloperName = &#39;Dealer&#39;  , &#39;Partner&#39;,
 IF( AcctSeed__Account__r.RecordType.DeveloperName = &#39;PersonAccount&#39;, &#39;Retail&#39;,
   IF( AcctSeed__Account__r.RecordType.DeveloperName = &#39;Business_Account&#39;, &#39;Retail&#39;,
     IF( AND( AcctSeed__Account__r.RecordType.DeveloperName = &#39;Supplier&#39;,  RecordType.Name = &#39;Retail Boat Sale&#39;), &#39;Retail&#39;, null))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sale Type</label>
    <type>Text</type>
</CustomField>