force-app/main/default/objects/AcctSeed__Project__c/fields/Serial_Location__c.field-meta.xml
<CustomField>
    <fullName>Serial_Location__c</fullName>
    <formula>IF(
ISBLANK(Serial_Number__c),&apos;&apos;,
BLANKVALUE(Serial_Number__r.GMBLASERP__Inventory_Balance__r.AcctSeedERP__Warehouse__r.Name,&apos;OUT&apos;))</formula>
    <label>Serial Location</label>
    <type>Text</type>
</CustomField>