force-app/main/default/objects/AcctSeed__Project__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Serial Number</label>
    <referenceTo>GMBLASERP__Serial_Number__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>