force-app/main/default/objects/AcctSeed__Project__c/fields/Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Date__c</fullName>
    <description>The Date the service is scheduled to happen</description>
    <inlineHelpText>The Date the service is scheduled to happen</inlineHelpText>
    <label>Service Date</label>
    <type>DateTime</type>
</CustomField>