force-app/main/default/objects/AcctSeed__Project__c/fields/Service_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Delivery_Date__c</fullName>
    <description>This field is set when a pick up date on a Service ERP is agreed upon with the customer. This is not to be confused with the Service Date, which is when the unit goes into the shop.</description>
    <inlineHelpText>This field is set when a pick up date on a Service ERP is agreed upon with the customer. This is not to be confused with the Service Date, which is when the unit goes into the shop. This date is set during Pending Inspection or Pending Pickup stage.</inlineHelpText>
    <label>Service Delivery Date</label>
    <type>DateTime</type>
</CustomField>