force-app/main/default/objects/AcctSeed__Project__c/fields/Service_ERP__c.field-meta.xml
<CustomField>
    <fullName>Service_ERP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service ERP</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Legend Service Work Order</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Project__c</referenceTo>
    <relationshipLabel>ERP Orders (Service ERP)</relationshipLabel>
    <relationshipName>Service_ERP_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>