force-app/main/default/objects/AcctSeed__Project__c/fields/Service_Follow_Up_Tasked__c.field-meta.xml
<CustomField>
    <fullName>Service_Follow_Up_Tasked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Follow Up Tasked</label>
    <type>Checkbox</type>
</CustomField>