force-app/main/default/objects/AcctSeed__Project__c/fields/Shipping_Status__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Status__c</fullName>
    <description>To determine what needs to be shipped, where, when and why.</description>
    <inlineHelpText>To determine what needs to be shipped, where, when and why.</inlineHelpText>
    <label>Shipping Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No shipment needed</fullName>
            </value>
            <value>
                <fullName>Items to be shipped to Barrie</fullName>
            </value>
            <value>
                <fullName>Items to be shipped to Montreal</fullName>
            </value>
            <value>
                <fullName>Items to be shipped to Whitefish</fullName>
            </value>
            <value>
                <fullName>Ready to ship to Barrie</fullName>
            </value>
            <value>
                <fullName>Ready to ship to Montreal</fullName>
            </value>
            <value>
                <fullName>Ready to ship to Whitefish</fullName>
            </value>
            <value>
                <fullName>All items shipped</fullName>
            </value>
            <value>
                <fullName>Ready to Ship to Dealer</fullName>
            </value>
            <value>
                <fullName>Items to be Shipped to Dealer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>