force-app/main/default/objects/AcctSeed__Project__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Quoting</fullName>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>Pending Diagnostic</fullName>
            </value>
            <value>
                <fullName>Pending Financing</fullName>
            </value>
            <value>
                <fullName>Plan Load</fullName>
            </value>
            <value>
                <fullName>Tagging Pending</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Pending Work Order</fullName>
            </value>
            <value>
                <fullName>Pending Authorization</fullName>
            </value>
            <value>
                <fullName>Pending Pick and Pack</fullName>
            </value>
            <value>
                <fullName>Parts Required</fullName>
            </value>
            <value>
                <fullName>Parts to be Ordered</fullName>
            </value>
            <value>
                <fullName>Parts On Order</fullName>
            </value>
            <value>
                <fullName>Pending Scheduling</fullName>
            </value>
            <value>
                <fullName>Pending Standard Rig</fullName>
            </value>
            <value>
                <fullName>Pending Rigging</fullName>
            </value>
            <value>
                <fullName>Ready to Ship</fullName>
            </value>
            <value>
                <fullName>Pending Final Rigging</fullName>
            </value>
            <value>
                <fullName>Pending Retail Rig</fullName>
            </value>
            <value>
                <fullName>Service Completed</fullName>
            </value>
            <value>
                <fullName>Repair Completed</fullName>
            </value>
            <value>
                <fullName>Pending Delivery</fullName>
            </value>
            <value>
                <fullName>Picked up / Won</fullName>
            </value>
            <value>
                <fullName>Delivered / Won</fullName>
            </value>
            <value>
                <fullName>Paused for Season</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Awaiting Parts Return</fullName>
            </value>
            <value>
                <fullName>Awaiting Boat Return</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>