force-app/main/default/objects/AcctSeed__Project__c/fields/Survey_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_Expiration_Date__c</fullName>
    <formula>Completed_Date__c + 30</formula>
    <label>Survey Expiration Date</label>
    <type>DateTime</type>
</CustomField>