force-app/main/default/objects/AcctSeed__Project__c/fields/Survey_Expiration_Date_String__c.field-meta.xml
<CustomField>
    <fullName>Survey_Expiration_Date_String__c</fullName>
    <formula>TEXT(YEAR(DATEVALUE(Survey_Send_Date__c + 30))) + &#39;-&#39; + TEXT(MONTH(DATEVALUE(Survey_Send_Date__c + 30))) + &#39;-&#39; + TEXT(DAY(DATEVALUE(Survey_Send_Date__c + 30))) + &#39;T&#39; + TEXT(HOUR(TIMEVALUE(Survey_Send_Date__c + 30))) + &#39;:&#39; + TEXT(MINUTE(TIMEVALUE(Survey_Send_Date__c + 30))) + &#39;:00Z&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Expiration Date String</label>
    <type>Text</type>
</CustomField>