force-app/main/default/objects/AcctSeed__Project__c/fields/Survey_Flag__c.field-meta.xml
<CustomField>
    <fullName>Survey_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Survey Flag</label>
    <type>Checkbox</type>
</CustomField>