force-app/main/default/objects/AcctSeed__Project__c/fields/Tax_Amount_Federal__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount_Federal__c</fullName>
    <formula>IF(  Order_Item_Total__c  == 0, 0 , Order_Taxable_Federal__c * Tax_Rate_Federal__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Amount (Federal)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>