force-app/main/default/objects/AcctSeed__Project__c/fields/Tax_Amount_Provincial__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount_Provincial__c</fullName>
    <formula>IF(  Order_Item_Total__c  == 0, 0 , Order_Taxable_Provincial__c * Tax_Rate_Provincial__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Amount (Provincial)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>