force-app/main/default/objects/AcctSeed__Project__c/fields/Term_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Term_End_Date__c</fullName>
    <formula>IF( ISNULL( Contract_Start_Date__c ), NULL, ADDMONTHS(Contract_Start_Date__c, Finance_Term__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term End Date</label>
    <type>Date</type>
</CustomField>