force-app/main/default/objects/AcctSeed__Project__c/fields/Total_Labour_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Labour_Hours__c</fullName>
    <label>Total Labour Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>