force-app/main/default/objects/AcctSeed__Project__c/fields/Total_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Tax__c</fullName>
    <formula>Tax_Amount_Federal__c + Tax_Amount_Provincial__c + Tax_Amount_Retail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>