force-app/main/default/objects/AcctSeed__Project__c/fields/Trade_In_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Trade_In_Arrival_Date__c</fullName>
    <inlineHelpText>Date/Time the customer plans on dropping off his boat for inspection</inlineHelpText>
    <label>Trade In Arrival Date</label>
    <type>DateTime</type>
</CustomField>