force-app/main/default/objects/AcctSeed__Project__c/fields/Trailer_Model_Year__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Model_Year__c</fullName>
    <formula>AcctSeed__Opportunity__r.Trailer_Model_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trailer Model Year</label>
    <type>Text</type>
</CustomField>