force-app/main/default/objects/AcctSeed__Project__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>IF( ISBLANK(AcctSeedERP__Manufactured_Product__c),&quot;Service&quot;,&quot;Manufacturing&quot;)</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>