force-app/main/default/objects/AcctSeed__Project__c/fields/Wage_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Wage_Requirement__c</fullName>
    <label>Wage Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DB</fullName>
            </value>
            <value>
                <fullName>SCA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>