force-app/main/default/objects/AcctSeed__Project__c/fields/Warranty_Checked__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this if you have confirmed Warranty</description>
    <inlineHelpText>Check this if you have confirmed Warranty</inlineHelpText>
    <label>Warranty Checked</label>
    <type>Checkbox</type>
</CustomField>