force-app/main/default/objects/AcctSeed__Project__c/fields/Warranty_Type__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Type__c</fullName>
    <formula>IF(RecordType.DeveloperName == &#39;Legend_Warranty&#39;,(IF(AcctSeed__Account__r.RecordType.DeveloperName == &#39;Supplier&#39;,&#39;Recoverable&#39;,&#39;Warranty&#39;)),&#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty Type</label>
    <type>Text</type>
</CustomField>