force-app/main/default/objects/AcctSeed__Project__c/recordTypes/BoatSale.recordType-meta.xml
<RecordType>
    <fullName>BoatSale</fullName>
    <active>true</active>
    <label>Retail Boat Sale</label>
</RecordType>