force-app/main/default/objects/AcctSeed__Project__c/recordTypes/CounterSale.recordType-meta.xml
<RecordType>
    <fullName>CounterSale</fullName>
    <active>true</active>
    <label>Legend Counter Sale</label>
</RecordType>