force-app/main/default/objects/AcctSeed__Project__c/recordTypes/Legend_Warranty.recordType-meta.xml
<RecordType>
    <fullName>Legend_Warranty</fullName>
    <active>true</active>
    <description>To process all warranty records</description>
    <label>Legend Warranty</label>
</RecordType>