force-app/main/default/objects/AcctSeed__Project__c/recordTypes/LegendFixedAsset.recordType-meta.xml
<RecordType>
    <fullName>LegendFixedAsset</fullName>
    <active>true</active>
    <label>Legend Fixed Asset</label>
</RecordType>