force-app/main/default/objects/AcctSeed__Project__c/recordTypes/LegendPartnerPartsOrder.recordType-meta.xml
<RecordType>
    <fullName>LegendPartnerPartsOrder</fullName>
    <active>true</active>
    <label>Legend Partner Parts Order</label>
</RecordType>