force-app/main/default/objects/AcctSeed__Project__c/recordTypes/Manufacturing.recordType-meta.xml
<RecordType>
    <fullName>Manufacturing</fullName>
    <active>true</active>
    <label>Legend Manufacturing Work Order</label>
</RecordType>