force-app/main/default/objects/AcctSeed__Project__c/recordTypes/PartnerBoatSale.recordType-meta.xml
<RecordType>
    <fullName>PartnerBoatSale</fullName>
    <active>true</active>
    <label>Partner Boat Sale</label>
</RecordType>