force-app/main/default/objects/AcctSeed__Project__c/recordTypes/PartnerRetailBoatSale.recordType-meta.xml
<RecordType>
    <fullName>PartnerRetailBoatSale</fullName>
    <active>true</active>
    <description>A retail Boat sale that is being picked up at a Partner dealership. Created from online Boat Reservation</description>
    <label>Partner Retail Boat Sale</label>
</RecordType>