force-app/main/default/objects/AcctSeed__Project__c/recordTypes/Service.recordType-meta.xml
<RecordType>
    <fullName>Service</fullName>
    <active>true</active>
    <label>Legend Service Work Order</label>
</RecordType>