force-app/main/default/objects/AcctSeed__Project__c/recordTypes/TradeIn.recordType-meta.xml
<RecordType>
    <fullName>TradeIn</fullName>
    <active>true</active>
    <label>Legend Trade In</label>
</RecordType>