force-app/main/default/objects/AcctSeed__Project__c/validationRules/Can_Unlock_a_Locked_ERP.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_Unlock_a_Locked_ERP</fullName>
    <active>true</active>
    <description>Only allow users that are part of the &#39;Can Unlock a Locked ERP&#39; permission set to unlock a ERP record by changing the status from Completed to another picklist value.</description>
    <errorConditionFormula>AND( 
OR( 
ISPICKVAL( PRIORVALUE ( AcctSeed__Status__c), &quot;Completed&quot;),
ISPICKVAL( PRIORVALUE ( AcctSeed__Status__c), &quot;Ready For Accounting&quot;) 
),
ISCHANGED( AcctSeed__Status__c), 
NOT ( $Profile.Name= &quot;System Administrator&quot;), 
NOT ( $Permission.Can_Unlock_a_Locked_ERP) 
)</errorConditionFormula>
    <errorMessage>Cannot change the status of a locked ERP</errorMessage>
</ValidationRule>