force-app/main/default/objects/AcctSeed__Project__c/listViews/AcctSeed__Active.listView-meta.xml
<ListView>
    <fullName>AcctSeed__Active</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Account__c</columns>
    <columns>AcctSeed__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active</label>
</ListView>