force-app/main/default/objects/AcctSeed__Project__c/listViews/AcctSeed__All.listView-meta.xml
<ListView>
    <fullName>AcctSeed__All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>AcctSeed__Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>AcctSeedERP__Work_Order_Number__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Serial_Product__c</columns>
    <columns>GMBLASERP__Warehouse__c</columns>
    <columns>AcctSeed__Status__c</columns>
    <columns>AcctSeed__Project_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Harris</value>
    </filters>
    <label>All</label>
</ListView>