force-app/main/default/objects/AcctSeed__Project__c/listViews/AcctSeed__Internal.listView-meta.xml
<ListView>
    <fullName>AcctSeed__Internal</fullName>
    <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>AcctSeed__Account__c</columns>
    <columns>AcctSeed__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Internal_Partner_Boat_Sale__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Internal_Partner_Parts_Order__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Internal_Labour_Service__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Internal_Warranty__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Internal</label>
</ListView>